Fixed project image opacity on mobile view

--- a/styles/projects.css
+++ b/styles/projects.css
@@ -158,9 +158,12 @@ img {
     width: 100%;
     height: 300px;
     margin-bottom: 30px;
+    opacity: 1;
   }
 
   .carousel-content {
     height: fit-content;
+    align-items: center;
+    text-align: center;
   }
 }
